--- a/css/style.css
+++ b/css/style.css
@@ -53,15 +53,24 @@ table {
 }
 
 :root {
-  --primary-color:white
-  --secondary-color:black ;
+  --primary-color:white;
+  --secondary-color:black;
+}
+
+.tashe {
+  --primary-color:black;
+  --secondary-color:white;
 }
 
 * {
   margin: 0;
   padding: 0;
-  background: var(--primary-color);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  color: var(--secondary-color) !important;
+  background: var(--primary-color) !important;
 }
 
 .mobile-navbar {
@@ -98,33 +107,33 @@ table {
 .container .igniting .left .Watch {
   color: #80228c;
 }
-.container .igniting .left .btn {
+.container .igniting .btn {
   display: flex;
   gap: 1rem;
 }
-.container .igniting .left .purple {
+.container .igniting .purple {
   background: #80228c;
-  color: white;
+  color: var(--primary-color);
   border: none;
 }
-.container .igniting .left .colorless {
+.container .igniting .colorless {
   border: 2px solid #80228c;
 }
-.container .igniting .right {
+.container .right {
   margin-top: 3rem;
 }
-.container .igniting .right .images {
+.container .right .images {
   display: flex;
   flex-direction: row;
   gap: 10px;
   justify-content: end;
 }
-.container .igniting .right .images img {
+.container .right .images img {
   width: 7rem;
   height: -moz-fit-content;
   height: fit-content;
 }
-.container .igniting .right .images .image1 {
+.container .right .images .image1 {
   margin-top: 3rem;
 }
 
@@ -140,12 +149,147 @@ table {
   margin-top: 7rem;
 }
 .second .container .row .rightt img {
-  height: 22rem;
-  width: 27rem;
+  height: 19rem;
+  width: 21rem;
   margin-top: 3rem;
 }
 .second .container .row .rightt .button {
   background-color: #80228c;
+  width: -moz-max-content;
+  width: max-content;
+  color: var(--primary-color);
+}
+
+.services .container .photos {
+  gap: 10px;
+  text-align: center;
+  gap: 10px;
+  display: flex;
+  justify-content: center;
+}
+.services .container .photos .picture {
+  height: 60vh;
+  position: relative;
+}
+.services .container .photos .picture img {
+  width: 25vw;
+  height: 35vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+}
+.services .container .photos .picture .text-h3 {
+  position: absolute;
+  top: 5px;
+  background-color: blue;
+  align-items: center;
+}
+.services .container .photos .picture .text-h3 h3 {
+  align-items: baseline;
+  text-align: center;
+  color: aqua;
+}
+.services .container .photos .one {
+  width: 25vw;
+  background: purple;
+  color: var(--primary-color);
+  height: 35vh;
+}
+.services .container .photos .one .message {
+  padding: 2rem;
+  width: 100%;
+}
+.services .container .photos .pics {
+  height: 60vh;
+}
+.services .container .photos .pics img {
+  width: 25vw;
+  height: 35vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: bottom;
+     object-position: bottom;
+}
+
+.comments {
+  padding: 3rem 0;
+}
+.comments .container .Testimonials .left {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.comments .container .Testimonials .left img {
+  height: 46vh;
+  padding-top: 3rem;
+}
+.comments .container .Testimonials .left .ptags {
+  align-items: center;
+  flex-direction: row;
+  width: 22rem;
+}
+.comments .container .right {
+  flex-direction: row;
+}
+.comments .container .right img {
+  height: 19rem;
+}
+
+.instagram .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.instagram .container .pictures {
+  display: flex;
+  gap: 10px;
+}
+.instagram .container .pictures img {
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 3rem;
+}
+.instagram .container .pictures .down {
+  margin-top: 3rem;
+}
+.instagram .container .button {
+  color: var(--primary-color);
+  background-color: #80228c;
+}
+.instagram .container .button button {
+  background-color: #80228c;
+  border: none;
+}
+
+.footer {
+  color: var(--primary-color);
+  background-color: #80228c;
+  margin-top: 3rem;
+  padding: 0 3rem;
+}
+.footer .p {
+  text-decoration: underline;
+  font-weight: 700;
+}
+.footer .row .left .icon2 {
+  display: flex;
+  gap: 3rem;
+}
+.footer .row .center .text {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.footer .row .center .text a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+.footer .row .right .icons {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+  size: 2px;
 }
 
 /*
@@ -196,9 +340,31 @@ No media query since this is the default in Bootstrap because it is "mobile firs
     background: var(--secondary-color);
     border-radius: 50%;
   }
-  .pc-navbar .flex-container img {
+  .pc-navbar .flex-container #manheru {
     width: 50px;
     height: 50px;
+  }
+  .second .container .row .rightt img {
+    height: 22rem;
+    width: 27rem;
+  }
+  .services .container .photos .picture img {
+    height: 69vh;
+  }
+  .services .container .photos .one {
+    height: 69vh;
+  }
+  .services .container .photos .pics img {
+    height: 69vh;
+  }
+  .comments .container .Testimonials .left img {
+    height: 60vh;
+  }
+  .comments .container .right img {
+    height: 20rem;
+  }
+  .instagram .container .pictures img {
+    width: 10rem;
   }
 }
 /* Large devices (desktops, 992px and up) */
