--- a/css/style.scss
+++ b/css/style.scss
@@ -50,14 +50,23 @@ table {
 }
 
 :root{
-	--primary-color:white
-	--secondary-color:black
+	--primary-color:white;
+	--secondary-color:black;
+}
+.tashe{
+	--primary-color:black;
+	--secondary-color:white;
 }
 *{
 	margin: 0;
 	padding: 0;
-	background: var(--primary-color);
+	// background: var(--primary-color);
+	// color: var(--secondary-color);
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body{
+	color: var(--secondary-color) !important;
+	background: var(--primary-color) !important;
 }
 .mobile-navbar{
 	display: flex;
@@ -94,6 +103,10 @@ table {
 			margin-top: 3rem;
 			.Watch{
 				color: #80228c;
+				
+			
+					
+				}
 			}
 			
 			.btn{
@@ -103,7 +116,7 @@ table {
 
 			.purple{
 				background: #80228c;
-				color: white;
+				color: var(--primary-color);
 				border: none;
 			}
 			.colorless{
@@ -130,7 +143,7 @@ table {
 		}
 	}	
 	
-}}
+}
 
 .second{
 	padding: 3rem 0;
@@ -151,18 +164,184 @@ table {
 			}
 			.rightt{
 				img{
-					height: 22rem;
-					width: 27rem;
+					height: 19rem;
+					width: 21rem;
 					margin-top: 3rem;
 				}
 				.button{
 					background-color: #80228c;
+					width: max-content;
+					color: var(--primary-color);
 				}
 					
 				}
 			}
 		}
 	}
+
+	.services{
+		.container{
+
+			.photos{
+				gap: 10px ;
+				text-align: center;
+				gap: 10px;
+				display: flex;
+				justify-content: center;
+				
+				
+				.picture{
+
+				
+					height: 60vh;
+					position: relative;
+					img{
+						width: 25vw;
+						height: 35vh;
+						object-fit: cover;
+						object-position: top;
+						
+					}
+				
+				.text-h3{
+					position: absolute;
+					top: 5px;
+					background-color: blue;
+					align-items: center;
+					h3{
+						align-items: baseline;
+						text-align: center;
+						color: aqua;
+		    			}
+				}
+			}
+				.one{
+					width: 25vw;
+					// padding: 50px;
+					background: purple;
+					color: var(--primary-color);
+					height: 35vh;
+					.message{
+						padding: 2rem;
+						width: 100%;
+					}
+				}
+				.pics{
+					height: 60vh;
+					img{
+						width: 25vw;
+						height: 35vh;
+						object-fit: cover;
+						object-position: bottom;
+						
+						
+					}
+				}
+				
+			}
+		}
+	}
+	.comments{
+		padding: 3rem 0;
+		.container{
+			.Testimonials{
+				.left{
+					width: fit-content;
+					img{
+						// margin-top: 2rem;
+						height: 46vh;
+						padding-top: 3rem;
+						// margin-left: 3rem;
+					}
+					.ptags{
+						align-items: center;
+						flex-direction: row;
+						width: 22rem;
+					}
+				}
+			}
+			.right{
+				// margin-right: 3rem;
+				flex-direction: row;
+				img{
+					height: 19rem;
+				}
+			}
+
+		}
+	}
+	.instagram{
+		.container{
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			.pictures{
+				display: flex;
+				gap: 10px;
+
+				img{
+					height: fit-content;
+					width: 3rem;
+				}
+				.down{
+					margin-top: 3rem;
+				}
+			}
+			.button{
+				color: var(--primary-color);
+				background-color: #80228c;
+
+				button{
+					background-color: #80228c;
+					border: none;
+				}
+			}
+		}
+	}
+	.footer{
+		color: var(--primary-color);
+		background-color: #80228c;
+		margin-top: 3rem;
+		padding: 0 3rem;
+
+		.p{
+			text-decoration: underline;
+			font-weight: 700;
+		}
+		.row{
+			.left{
+				.icon2{
+					display: flex;
+					gap: 3rem;
+				}
+	
+
+			}
+			.center{
+				.text{
+					display: flex;
+					flex-direction: column;
+					gap: 15px;
+					a{
+						text-decoration: none;
+						color: var(--primary-color);
+					}
+				}
+			}
+			.right{
+				.icons{
+					display: flex;
+					align-items: center;
+					gap: 3rem;
+					size: 2px;
+				}
+			}
+		}
+	}
+		
+	
+
 
 
 
@@ -225,13 +404,74 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 					border-radius: 50%
 				}
 			}
-			img{
+			#manheru{
 				width: 50px;
 				height: 50px;
 			}
 		}
 	}
+
+	.second{
+		.container{
+			.row{
+				.rightt{
+					img{
+						height: 22rem;
+						width: 27rem;
+					}
+					}
+				}
+			}
+		}
+
+		.services{
+			.container{
+				.photos{
+					.picture{
+						img{
+							height: 69vh;
+						}
+				}
+					.one{
+						height: 69vh;
+					}
+					.pics{
+						img{
+							height: 69vh;
+						}
+					}
+					
+				}
+			}
+		}
+
+		.comments{
+			.container{
+				.Testimonials{
+					.left{
+						img{
+							height: 60vh;
+						}
+					}
+				}
+				.right{
+					img{
+						height: 20rem;
+					}
+				}
 	
+			}
+		}
+	
+		.instagram{
+			.container{
+				.pictures{
+					img{
+						width: 10rem;
+					}
+				}
+			}
+		}
 }
 
 /* Large devices (desktops, 992px and up) */
